[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/Holepunch/holepunch_node.gd" type="Script" id=1]
[ext_resource path="res://HolePunchMain.gd" type="Script" id=2]

[node name="HolePunchMain" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HolePunch" type="Node" parent="."]
script = ExtResource( 1 )
rendevouz_address = "54.147.40.190"
rendevouz_port = 8080
port_cascade_range = 50

[node name="Main" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCode" type="LineEdit" parent="Main"]
margin_left = 401.0
margin_top = 426.0
margin_right = 603.0
margin_bottom = 450.0
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
margin_left = 381.0
margin_top = 55.0
margin_right = 473.0
margin_bottom = 69.0
rect_scale = Vector2( 3, 3 )
text = "HOST A GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Main"]
margin_left = 389.0
margin_top = 348.0
margin_right = 481.0
margin_bottom = 362.0
rect_scale = Vector2( 3, 3 )
text = "JOIN A GAME"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Host" type="Button" parent="Main"]
margin_left = 479.0
margin_top = 135.0
margin_right = 551.0
margin_bottom = 174.0
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Main"]
margin_left = 608.0
margin_top = 427.0
margin_right = 643.0
margin_bottom = 447.0
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preparing" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Preparing"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -7.0
margin_right = -683.0
margin_bottom = 7.0
rect_scale = Vector2( 3, 3 )
text = "PREPARING..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FailTimer" type="Timer" parent="."]
one_shot = true

[node name="ConnectTimer" type="Timer" parent="."]
one_shot = true

[connection signal="hole_punched" from="HolePunch" to="." method="_on_HolePunch_hole_punched"]
[connection signal="pressed" from="Main/Host" to="." method="_on_Host_pressed"]
[connection signal="pressed" from="Main/Join" to="." method="_on_Join_pressed"]
[connection signal="timeout" from="FailTimer" to="." method="_on_FailTimer_timeout"]
[connection signal="timeout" from="ConnectTimer" to="." method="_on_ConnectTimer_timeout"]
